compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_value_into_ok_if_types_match_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  wibble(1)\n}\n\nfn wibble(arg: Result(Int, String)) { todo }\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:10
  │
3 │   wibble(1)
  │          ^ Did you mean to wrap this in an `Ok`?

Expected type:

    Result(Int, String)

Found type:

    Int
